<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg3"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.em.edumanager.AddStudentGradeActivity" >

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/title_activity_add_student_score"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

        <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Enter Student ID"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

        <EditText
                android:id="@+id/studentIDGradeEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

        <Button
                android:id="@+id/butQueryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Query"
                android:textSize="16sp"
                android:background="@android:color/holo_blue_light"
                android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

        <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Student ID:"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

        <TextView
                android:id="@+id/studentIDText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text=""
                android:textSize="16sp"
                android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

        <TextView
                android:id="@+id/textViewFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="First Name:"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

        <TextView
                android:id="@+id/firstnameGradeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text=""
                android:textSize="16sp"
                android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

        <TextView
                android:id="@+id/textViewLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Last Name:"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

        <TextView
                android:id="@+id/lastnameGradeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text=""
                android:textSize="16sp"
                android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

        <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Android:"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

        <EditText
                android:id="@+id/androidGradeEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

        <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="JAVA:"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

        <EditText
                android:id="@+id/javaGradeEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

        <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="HTML:"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

        <EditText
                android:id="@+id/htmlGradeEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@android:color/black" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout7"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

        <Button
                android:id="@+id/butAddButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Add"
                android:textSize="16sp"
                android:background="@android:color/holo_green_light"
                android:textColor="#FFFFFF" />

        <Button
                android:id="@+id/butClearButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Clear"
                android:textSize="16sp"
                android:background="@android:color/holo_red_light"
                android:textColor="#FFFFFF" />
    </LinearLayout>

</RelativeLayout>
