<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                tools:context="com.em.edumanager.ModifyPasswordActivity"
                android:background="@drawable/bg3">

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/title_activity_pass_repair"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher" />

    <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Old Password:"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

        <EditText
                android:id="@+id/oldPasswordEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:padding="8dp"
                 />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

        <TextView
                android:id="@+id/repairnumtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Password:"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

        <EditText
                android:id="@+id/newPasswordEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:padding="8dp"
                 />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

        <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confirm Password"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

        <EditText
                android:id="@+id/confirmPasswordEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:padding="8dp"
                 />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout3"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:gravity="center">

        <Button
                android:id="@+id/butModify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Modify"
                android:textSize="16sp"
                android:background="@android:color/holo_green_light"
                android:textColor="#FFFFFF"/>

        <Button
                android:id="@+id/butClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Clear"
                android:textSize="16sp"
                android:background="@android:color/holo_red_light"
                android:textColor="#FFFFFF" />
    </LinearLayout>

</RelativeLayout>
